--- a/static/styles.css
+++ b/static/styles.css
@@ -215,7 +215,55 @@ iframe {
     color: #333;
     line-height: 1.6;
 }
-
-
-
-
+.code-container {
+    position: relative;
+    background: #f4f4f4;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+  }
+  .code-scrollable {
+    max-height: 300px; /* Ajusta la altura máxima aquí */
+    overflow-y: auto;
+    padding: 10px;
+  }
+  pre {
+    margin: 0;
+    font-family: "Courier New", monospace;
+  }
+  .copy-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #333333;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  .copy-button:hover {
+    background: #666666;
+  }
+  .copy-confirmation {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    transform: translateY(20px);
+  }
+  .copy-confirmation.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
