--- a/static/styles.css
+++ b/static/styles.css
@@ -41,6 +41,20 @@ h1 {
     margin-right: 20rem;
 }
 
+h2 {
+    font-family: VeraBd;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 20rem;
+    color: #0e49a2;
+}
+
+b {
+    font-family: VeraBd;
+    color: #222222;
+}
+
+
 p {
     font-family: Vera;
     font-size: 1.2rem;
@@ -104,7 +118,7 @@ li {
 }
 
 .section-three {
-    background:#e4e4e7;
+    background:#eeeeee;
     color: #333;
 }
 
@@ -214,6 +228,7 @@ iframe {
     font-size: 18px;
     color: #333;
     line-height: 1.6;
+    align-items: start;
 }
 .code-container {
     position: relative;
@@ -221,17 +236,28 @@ iframe {
     border: 1px solid #ddd;
     border-radius: 5px;
     overflow: hidden;
-    margin-top: 20px;
   }
   .code-scrollable {
     max-height: 300px; /* Ajusta la altura máxima aquí */
     overflow-y: auto;
-    padding: 10px;
   }
   pre {
     margin: 0;
-    font-family: "Courier New", monospace;
+    font-family: Vera;
   }
+  pre.code-block {
+    white-space: pre-wrap;  /* Permite el salto de línea automático */
+    word-wrap: break-word;  /* Ajusta palabras largas */
+    margin: 0;
+    padding: 0;
+    font-family: Vera, monospace; /* Fuente monoespaciada */
+    font-size: 14px; /* Tamaño de la fuente */
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: auto; /* Permite desplazamiento si el código es muy largo */
+  }  
+
   .copy-button {
     position: absolute;
     top: 10px;
@@ -267,3 +293,291 @@ iframe {
     opacity: 1;
     transform: translateY(0);
   }
+
+  textarea {
+    width: 100%;
+    height: 200px;
+    font-family: Vera, monospace;
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    resize: vertical;
+  }
+  
+  .run-button {
+    background: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .run-button:hover {
+    background: #218838;
+  }
+  
+  .terminal {
+    background: #000;
+    color: #00ff00;
+    padding: 15px;
+    border-radius: 5px;
+    font-family: Vera, monospace;
+    font-size: 16px;
+    height: 300px;
+    overflow-y: auto;
+    white-space: pre-wrap;
+    margin-top: 20px;
+  }
+
+  .code-block, .output-container {
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: Vera, monospace;
+    font-size: 14px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow: auto;
+  }
+
+  .output-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 15px;
+    padding: 15px;
+  }
+
+  .result-item {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: Vera, monospace;
+    font-size: 14px;
+    width: 70%;
+    align-items: center;
+  }
+
+
+  .section {
+    background: #fff;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 50rem;
+}
+
+.section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    cursor: pointer;
+    background: #f9f9f9;
+    border-bottom: 1px solid #ddd;
+}
+
+.section-header:hover {
+    background: #f0f0f0;
+}
+
+.section-header h3 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.icon {
+    font-size: 20px;
+    font-weight: bold;
+    color: #666;
+}
+
+.icon:hover {
+    color: #000;
+}
+
+.section-content {
+    padding: 15px;
+    display: none;
+    font-size: 16px;
+    color: #333;
+}
+
+.section-content p {
+    margin: 0 0 10px;
+}
+
+.section-content ul {
+    margin: 10px 0 0;
+    padding: 0 0 0 20px;
+}
+
+.section-content ul li {
+    margin: 5px 0;
+}
+
+.tabs {
+    font-family: Arial, sans-serif;
+    display: flex;
+    background-color: #f4f4f4;
+    width: 50rem;
+}
+
+.tabs-container {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    background-color: #ffffff;
+    border-bottom: 2px solid #ddd;
+    width: 100%;
+    max-width: 50rem;
+    z-index: 10;
+}
+
+.tab {
+    flex: 1;
+    text-align: center;
+    padding: 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    color: #555;
+    border-bottom: 3px solid transparent;
+}
+
+.tab.active {
+    color: #007bff;
+    border-bottom: 3px solid #007bff;
+}
+
+.content-container {
+    margin-top: 5rem; /* Space for fixed tabs */
+    padding: 1rem;
+    background-color: #ffffff;
+    width: 100%;
+    max-width: 30rem;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+    display: none;
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.content.active {
+    display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+p {
+    line-height: 1.6;
+}
+
+.array-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    gap: 10px;
+  }
+
+  .array-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+
+  .array-item .index {
+    position: absolute;
+    top: -20px;
+    font-size: 14px;
+    color: #555;
+  }
+
+  .array-item .value {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  .description {
+    text-align: center;
+    max-width: 600px;
+    margin: 20px;
+    font-size: 18px;
+    color: #333;
+  }
+
+  #array-container {
+    display: flex;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.array-item.selected {
+    background-color: lightcoral;
+}
+
+button {
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007BFF;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+input[type="text"] {
+    width: 100px; /* Coincide con el ancho de los elementos del arreglo */
+    height: 50px; /* Coincide con la altura del botón */
+    padding: 10px;
+    font-size: 16px; /* Tamaño del texto igual al de los botones */
+    border: 1px solid #000;
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-align: center; /* Para centrar el texto dentro del input */
+  }
+  
+  input[type="text"]:focus {
+    outline: none;
+    border-color: #007bff; /* Cambia el borde al enfocarse */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  }
+  
